syntax = "proto3";

service CrashService {
    rpc Crash(CrashRequest) returns (CrashResponse) {}
}

message CrashRequest {
    uint64 size = 1;
}

message CrashResponse {
    bytes payload = 1;
}

